# YourEmailValidator

./: .env  .env.example  CONTRIBUTING.md  Dockerfile  README.md  auth.py  compose.yaml  database.py  email_validator.db  faq.json  index.md  main.py  models.py  pyproject.toml  requirements.txt  test.py
app/: config.py  database.py  dependencies.py  main.py
app/api/: models.py  router.py  routes.py  schemas.py  utils.py
app/api/endpoints/: api_keys.py  auth.py
app/auth/: dependencies.py  models.py  routes.py  schemas.py  utils.py
app/core/: middleware.py  security.py  utils.py
app/middleware/: api_logger.py  authentication.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: auth.py  email_validator.py  exceptions_types.py  routes.py  schemas.py  utils.py
app/web/: routes.py  utils.py
app/webhooks/: routes.py
db/: email_validator.db
static/css/: styles.css
static/js/: main.js
templates/: base.html
templates/components/: faq.html  features.html  footer.html  header.html  hero.html  pricing.html  support_button.html
templates/macros/: cards.html
templates/pages/: change_password.html  dashboard.html  docs-api.html  documentation.html  donate.html  forgot_password.html  home.html  login.html  register.html  reset_password.html
