[project]
name = "emailvalidator-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.1",
    "pydantic[email]>=2.9.2",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.17",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]
